[i18n] update to default annotation